[package]
name = 'ferrum-network'
version = '0.0.1'
authors = ['Ferrum Network <https://github.com/ferrumnet>']
build = 'build.rs'
edition = '2021'
homepage = 'https://ferrum.network'
license = 'Unlicense'
publish = false
repository = 'https://github.com/ferrumnet/ferrum-network/'
description = 'Ferrum Network Poc Testnet'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "ferrum-network"

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0.0" }
futures = { version = "0.3.21" }
hex-literal = "0.3.4"
jsonrpsee = { version = "0.16.2", features = ["server"] }
log = "0.4.17"
serde_bytes = "0.11"
serde_json = "1.0"
serde = { version = "1.0.152", features = ["derive"] }

# Substrate
frame-benchmarking = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.39" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.39" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.39" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.39" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.39" }
sc-cli = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.39" }
sc-client-api = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.39" }
sc-consensus = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.39" }
sc-executor = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.39" }
sc-network = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.39" }
sc-network-common = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.39" }
sc-rpc = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.39" }
sc-service = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.39" }
sc-sysinfo = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.39" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.39" }
sc-tracing = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.39" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.39" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.39" }
sp-api = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.39" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.39" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.39" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.39" }
sp-core = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.39" }
sp-io = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.39" }
sp-keystore = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.39" }
sp-offchain = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.39" }
sp-runtime = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.39" }
sp-session = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.39" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.39" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.39" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.39" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.39" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.39" }
try-runtime-cli = { git = "https://github.com/paritytech/substrate", optional = true, "branch" = "polkadot-v0.9.39" }

# Polkadot
polkadot-cli = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.39" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.39" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.39" }
xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.39" }

# Cumulus
cumulus-client-cli = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.39" }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.39" }
cumulus-client-consensus-common = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.39" }
cumulus-client-consensus-relay-chain = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.39" }
cumulus-client-network = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.39" }
cumulus-client-service = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.39" }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.39" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.39" }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.39" }
cumulus-relay-chain-interface = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.39" }
cumulus-relay-chain-minimal-node = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.39" }

# Frontier
fc-cli = { git = 'https://github.com/paritytech/frontier.git', default-features = false, branch = "polkadot-v0.9.39" }
fc-consensus = { git = 'https://github.com/paritytech/frontier.git', default-features = false, branch = "polkadot-v0.9.39" }
fc-db = { git = 'https://github.com/paritytech/frontier.git', default-features = false, branch = "polkadot-v0.9.39" }
fc-mapping-sync = { git = 'https://github.com/paritytech/frontier.git', default-features = false, branch = "polkadot-v0.9.39" }
fc-rpc = { git = 'https://github.com/paritytech/frontier.git', default-features = false, branch = "polkadot-v0.9.39" }
fc-rpc-core = { git = 'https://github.com/paritytech/frontier.git', default-features = false, branch = "polkadot-v0.9.39" }
fp-consensus = { git = 'https://github.com/paritytech/frontier.git', default-features = false, branch = "polkadot-v0.9.39" }
fp-dynamic-fee = { git = 'https://github.com/paritytech/frontier.git', default-features = false, branch = "polkadot-v0.9.39" }
fp-evm = { git = 'https://github.com/paritytech/frontier.git', default-features = false, branch = "polkadot-v0.9.39" }
fp-rpc = { git = 'https://github.com/paritytech/frontier.git', default-features = false, branch = "polkadot-v0.9.39" }
fp-storage = { git = 'https://github.com/paritytech/frontier.git', default-features = false, branch = "polkadot-v0.9.39" }

# Local Dependencies
ferrum-primitives = { path = "../primitives" }
ferrum-runtime = { path = "../runtime" }
pallet-quantum-portal = { path = "../pallets/quantum-portal" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.39" }

[features]
default = []
runtime-benchmarks = [
	"try-runtime-cli/try-runtime",
	"ferrum-runtime/runtime-benchmarks",
	"polkadot-cli/runtime-benchmarks",
]
try-runtime = [
	"try-runtime-cli/try-runtime",
	"ferrum-runtime/try-runtime",
]
