[package]
name = 'ferrum-network'
version = '0.0.1'
authors = ['Ferrum Network <https://github.com/ferrumnet>']
build = 'build.rs'
edition = '2021'
homepage = 'https://ferrum.network'
license = 'Unlicense'
publish = false
repository = 'https://github.com/ferrumnet/ferrum-network/'
description = 'Ferrum Network Poc Testnet'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "ferrum-network"

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.2.2" }
futures = { version = "0.3.21" }
hex-literal = "0.3.4"
jsonrpsee = { version = "0.16.2", features = ["server"] }
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"

# Substrate
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", "branch" = "release-polkadot-v1.12.0" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/polkadot-sdk", "branch" = "release-polkadot-v1.12.0" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk", "branch" = "release-polkadot-v1.12.0" }
sc-basic-authorship = { git = "https://github.com/paritytech/polkadot-sdk", "branch" = "release-polkadot-v1.12.0" }
sc-chain-spec = { git = "https://github.com/paritytech/polkadot-sdk", "branch" = "release-polkadot-v1.12.0" }
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk", "branch" = "release-polkadot-v1.12.0" }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", "branch" = "release-polkadot-v1.12.0" }
sc-client-db = { git = "https://github.com/paritytech/polkadot-sdk", "branch" = "release-polkadot-v1.12.0" }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk", "branch" = "release-polkadot-v1.12.0" }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk", "branch" = "release-polkadot-v1.12.0" }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk", "branch" = "release-polkadot-v1.12.0" }
sc-network-sync = { git = "https://github.com/paritytech/polkadot-sdk", "branch" = "release-polkadot-v1.12.0" }
sc-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", "branch" = "release-polkadot-v1.12.0" }
sc-network-common = { git = "https://github.com/paritytech/polkadot-sdk", "branch" = "release-polkadot-v1.12.0" }
sc-rpc = { git = "https://github.com/paritytech/polkadot-sdk", "branch" = "release-polkadot-v1.12.0" }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk", "branch" = "release-polkadot-v1.12.0" }
sc-sysinfo = { git = "https://github.com/paritytech/polkadot-sdk", "branch" = "release-polkadot-v1.12.0" }
sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk", "branch" = "release-polkadot-v1.12.0" }
sc-tracing = { git = "https://github.com/paritytech/polkadot-sdk", "branch" = "release-polkadot-v1.12.0" }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", "branch" = "release-polkadot-v1.12.0" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk", "branch" = "release-polkadot-v1.12.0" }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", "branch" = "release-polkadot-v1.12.0" }
sp-application-crypto = { git = "https://github.com/paritytech/polkadot-sdk", "branch" = "release-polkadot-v1.12.0" }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", "branch" = "release-polkadot-v1.12.0" }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk", "branch" = "release-polkadot-v1.12.0" }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", "branch" = "release-polkadot-v1.12.0" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/polkadot-sdk", "branch" = "release-polkadot-v1.12.0" }
sc-rpc-api = { git = "https://github.com/paritytech/polkadot-sdk", "branch" = "release-polkadot-v1.12.0" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", "branch" = "release-polkadot-v1.12.0" }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk", "branch" = "release-polkadot-v1.12.0" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", "branch" = "release-polkadot-v1.12.0" }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk", "branch" = "release-polkadot-v1.12.0" }
sp-keystore = { git = "https://github.com/paritytech/polkadot-sdk", "branch" = "release-polkadot-v1.12.0" }
sp-offchain = { git = "https://github.com/paritytech/polkadot-sdk", "branch" = "release-polkadot-v1.12.0" }
sc-offchain = { git = "https://github.com/paritytech/polkadot-sdk", "branch" = "release-polkadot-v1.12.0" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", "branch" = "release-polkadot-v1.12.0" }
sp-session = { git = "https://github.com/paritytech/polkadot-sdk", "branch" = "release-polkadot-v1.12.0" }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", "branch" = "release-polkadot-v1.12.0" }
sp-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", "branch" = "release-polkadot-v1.12.0" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk", "branch" = "release-polkadot-v1.12.0" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/polkadot-sdk", "branch" = "release-polkadot-v1.12.0" }
try-runtime-cli = { git = "https://github.com/paritytech/polkadot-sdk", optional = true, "branch" = "release-polkadot-v1.12.0" }

# Polkadot
polkadot-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.12.0" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.12.0" }
polkadot-service = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.12.0" }
xcm = { package = "staging-xcm", git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.12.0" }

# Cumulus
cumulus-client-cli = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.12.0" }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.12.0" }
cumulus-client-consensus-common = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.12.0" }
cumulus-client-consensus-relay-chain = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.12.0" }
cumulus-client-network = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.12.0" }
cumulus-client-service = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.12.0" }
cumulus-primitives-core = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.12.0" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.12.0" }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.12.0" }
cumulus-relay-chain-interface = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.12.0" }
cumulus-relay-chain-minimal-node = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.12.0" }

# Frontier
fc-cli = { git = 'https://github.com/paritytech/frontier.git', default-features = false, branch = "polkadot-v1.1.0" }
fc-api = { git = 'https://github.com/paritytech/frontier.git', default-features = false, branch = "polkadot-v1.1.0" }
fc-consensus = { git = 'https://github.com/paritytech/frontier.git', default-features = false, branch = "polkadot-v1.1.0" }
fc-db = { git = 'https://github.com/paritytech/frontier.git', default-features = false, branch = "polkadot-v1.1.0" }
fc-mapping-sync = { git = 'https://github.com/paritytech/frontier.git', default-features = false, branch = "polkadot-v1.1.0" }
fc-rpc = { git = 'https://github.com/paritytech/frontier.git', default-features = false, branch = "polkadot-v1.1.0" }
fc-rpc-core = { git = 'https://github.com/paritytech/frontier.git', default-features = false, branch = "polkadot-v1.1.0" }
fc-storage = { git = 'https://github.com/paritytech/frontier.git', default-features = false, branch = "polkadot-v1.1.0" }
fp-consensus = { git = 'https://github.com/paritytech/frontier.git', default-features = false, branch = "polkadot-v1.1.0" }
fp-dynamic-fee = { git = 'https://github.com/paritytech/frontier.git', default-features = false, branch = "polkadot-v1.1.0" }
fp-evm = { git = 'https://github.com/paritytech/frontier.git', default-features = false, branch = "polkadot-v1.1.0" }
fp-rpc = { git = 'https://github.com/paritytech/frontier.git', default-features = false, branch = "polkadot-v1.1.0" }
fp-storage = { git = 'https://github.com/paritytech/frontier.git', default-features = false, branch = "polkadot-v1.1.0" }

# Local Dependencies
ferrum-primitives = { path = "../primitives" }
ferrum-runtime = { path = "../runtime/kusama" }
ferrum-testnet-runtime = { path = "../runtime/testnet" }
pallet-quantum-portal = { path = "../pallets/quantum-portal" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk", "branch" = "release-polkadot-v1.12.0" }

[features]
default = []
runtime-benchmarks = [
	"try-runtime-cli/try-runtime",
	"ferrum-testnet-runtime/runtime-benchmarks",
	"polkadot-cli/runtime-benchmarks",
]
try-runtime = [
	"try-runtime-cli/try-runtime",
	"ferrum-testnet-runtime/try-runtime",
]
